navigate back and forth to profile
Time up[things left to do, add onscroll listener to recycler to fetch more items as user scroll and add the unit tests for the viewmdel, repo and database using the contract created]

Please check this repo
https://github.com/mikelis135/Growth in the testing branch for where unit test for contract like this that i wrote.

Thank you

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -3,15 +3,40 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/refresh"
-    android:animateLayoutChanges="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MainFragment">
+    android:animateLayoutChanges="true"
+    tools:context=".ui.main.MainFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.MainFragment">
+        tools:context=".ui.main.MainFragment">
+
+        <TextView
+            android:id="@+id/titleBirthday"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Birthdays"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:id="@+id/line"
+            android:layout_width="0dp"
+            android:layout_height="0.5dp"
+            android:layout_marginHorizontal="6dp"
+            android:layout_marginVertical="16dp"
+            android:alpha="0.5"
+            android:background="#cccccc"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/titleBirthday" />
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/birthdayRecycler"
@@ -21,7 +46,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/line"
             tools:listitem="@layout/profile_item" />
 
         <TextView
@@ -31,10 +56,10 @@
             android:layout_margin="20dp"
             android:drawablePadding="10dp"
             android:gravity="center"
-            android:visibility="gone"
             android:padding="2dp"
             android:text="@string/pull_refresh"
             android:textSize="18sp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
